fixed horizontal overflow

--- a/assets/global.css
+++ b/assets/global.css
@@ -47,7 +47,7 @@ h1, h2, h3 {
     max-width: 1000px;
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .card {
